add bc_qcrfsc into the package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(bc_eigenMS)
 export(bc_nomis)
 export(bc_pareto)
 export(bc_power)
+export(bc_qcrfsc)
 export(bc_qcrlsc)
 export(bc_range)
 export(bc_ruvRandom)
