add internal tiger functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method(print,tigerFilt)
 export("%>%")
 export("%dopar%")
+export(Internal.compute_cor)
+export(Internal.createFolds)
+export(Internal.run_ensemble)
 export(apply_imputation)
 export(apply_tigerFilt)
 export(bc_combat)
@@ -19,6 +22,7 @@ export(bc_tiger)
 export(bc_waveica)
 export(imputation)
 export(optimal_span)
+export(run_TIGER_internal)
 export(tiger_filter)
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
