updated more tiger functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(bc_ruvRandom)
 export(bc_serrf)
 export(bc_tiger)
 export(bc_waveica)
+export(compute_targetVal)
 export(imputation)
 export(optimal_span)
 export(run_TIGER_internal)
