added more tiger functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 S3method(print,tigerFilt)
 export("%>%")
 export("%dopar%")
+export(Internal.boxplot.stats)
 export(Internal.compute_cor)
 export(Internal.createFolds)
+export(Internal.remove_NA)
 export(Internal.run_ensemble)
 export(apply_imputation)
 export(apply_tigerFilt)
@@ -20,10 +22,12 @@ export(bc_ruvRandom)
 export(bc_serrf)
 export(bc_tiger)
 export(bc_waveica)
+export(compute_RSD)
 export(compute_targetVal)
 export(imputation)
 export(optimal_span)
 export(run_TIGER_internal)
+export(select_variable)
 export(tiger_filter)
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
