added helper functions for obtaining batch information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ export(bc_ruvRandom)
 export(bc_serrf)
 export(bc_tiger)
 export(bc_waveica)
+export(get_batch_method)
+export(get_batch_parameters)
 export(imputation)
 export(optimal_span)
 export(tiger_filter)
