updated helper functions with testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(bc_tiger)
 export(bc_waveica)
 export(get_batch_method)
 export(get_batch_parameters)
+export(get_data_batch)
 export(imputation)
 export(optimal_span)
 export(tiger_filter)
