added ranking metric for becas as a function in malbacR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(get_batch_parameters)
 export(get_data_batch)
 export(imputation)
 export(optimal_span)
+export(rank_becas)
 export(tiger_filter)
 importFrom(foreach,"%dopar%")
 importFrom(magrittr,"%>%")
