--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -1,8 +1,12 @@
-pandoc: 2.19.2
+pandoc: 3.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   malbacR_vignette_condensed_filtered: malbacR_vignette_condensed_filtered.html
   malbacR_vignette_expanded_unfiltered: malbacR_vignette_expanded_unfiltered.html
-last_built: 2023-10-19T13:22Z
+  malbacR_vignette_rank_becas: malbacR_vignette_rank_becas.html
+last_built: 2024-02-01T17:10Z
+urls:
+  reference: https://pmartr.github.io/malbacR/reference
+  article: https://pmartr.github.io/malbacR/articles
 
