updated vignettes and minor typos

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,8 @@ Imports:
     JADE,
     corpcor,
     caret,
-    grDevices
+    grDevices,
+    MuMIn
 Remotes:
     github::hafen/trelliscopejs,
     github::dengkuistat/WaveICA_2.0,
