--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Depends:
 Encoding: UTF-8
 LazyData: true
 VignetteBuilder: knitr
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 biocViews:
 Imports:
     magrittr,
@@ -37,7 +37,9 @@ Imports:
     corpcor,
     caret,
     grDevices,
-    MuMIn
+    MuMIn,
+    purrr,
+    tidyr
 Remotes:
     github::hafen/trelliscopejs,
     github::dengkuistat/WaveICA_2.0,
